--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@ body {
   font-family: "Roboto", sans-serif;
 }
 .container {
-  width: 45%;
-  height: 60%;
+  width: 700px;
+  height: 400px;
   background-color: var(--White);
   border-radius: 20px;
   display: flex;
@@ -47,6 +47,7 @@ form {
 
 .content-section {
   padding: 20px;
+  height: 100%;
 }
 .content-section h1 {
   font-size: 2.5rem;
